Checking document id is accessible to user