@@ -1,45 +1,14 @@
 package uk.gov.hmcts.ccd.domain.service.getcasedocument;
 
-import static org.junit.jupiter.api.Assertions.assertAll;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-
-import static org.mockito.Mockito.doReturn;
-import static org.mockito.Mockito.verify;
-import static org.mockito.ArgumentMatchers.anyBoolean;
-import static org.mockito.ArgumentMatchers.eq;
-import java.io.IOException;
-import java.io.InputStream;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-
-import java.util.HashMap;
-import java.util.List;
-
-import java.util.Optional;
-import java.util.Set;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.is;
 import com.fasterxml.jackson.core.type.TypeReference;
-
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
-
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.mockito.ArgumentMatchers;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-import uk.gov.hmcts.ccd.data.caseaccess.CaseUserRepository;
-import uk.gov.hmcts.ccd.data.user.UserRepository;
 import uk.gov.hmcts.ccd.domain.model.definition.CaseDetails;
-import uk.gov.hmcts.ccd.domain.model.definition.CaseFieldDefinition;
-import uk.gov.hmcts.ccd.domain.model.definition.CaseTypeDefinition;
-
-import uk.gov.hmcts.ccd.domain.service.common.AccessControlService;
-import uk.gov.hmcts.ccd.domain.service.common.CaseTypeService;
 import uk.gov.hmcts.ccd.domain.service.getcase.CaseNotFoundException;
 import uk.gov.hmcts.ccd.domain.service.getcase.GetCaseOperation;
 import uk.gov.hmcts.ccd.endpoint.exceptions.BadRequestException;
@@ -47,59 +16,55 @@ import uk.gov.hmcts.ccd.v2.external.domain.CaseDocumentMetadata;
 import uk.gov.hmcts.ccd.v2.external.domain.DocumentPermissions;
 import uk.gov.hmcts.ccd.v2.external.domain.Permission;
 
+import java.io.IOException;
+import java.io.InputStream;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.Optional;
+
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.is;
+import static org.junit.jupiter.api.Assertions.assertAll;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.verify;
+
 public class GetCaseDocumentsOperationTest {
 
     @Mock
     private GetCaseOperation getCaseOperation;
     @Mock
-    private UserRepository userRepository;
-    @Mock
-    private CaseUserRepository caseUserRepository;
-    @Mock
-    private CaseTypeService caseTypeService;
-    @Mock
     private DocumentIdValidationService documentIdValidationService;
-    @Mock
-    private AccessControlService accessControlService;
-
     private GetCaseDocumentOperation caseDocumentsOperation;
 
     private static final String CASE_REFERENCE = "1234123412341238";
     private static final String CASE_TYPE_ID = "BEFTA_CASETYPE_2_1";
     private static final String JURISDICTION_ID = "BEFTA_JURISDICTION_2";
+
     private static final String CASE_DOCUMENT_ID = "a780ee98-3136-4be9-bf56-a46f8da1bc97";
+    private static final String CASE_DOCUMENT_ID_IN_COMPLEX_TYPE = "84f04693-56ae-4aad-97e8-d1fc7592acea";
+    private static final String CASE_DOCUMENT_ID_IN_A_COLLECTION = "f6d623f2-db67-4a01-ae6e-3b6ee14a8b20";
+    private static final String CASE_DOCUMENT_ID_IN_A_COMPLEX_COLLECTION = "19de0db3-37c6-4191-a81d-c31a1379a9ca";
     private static final String CASE_DOCUMENT_ID_INVALID = "a780ee98-3136-4be9-bf56-a46f8da1bc9@";
     private static final String CASE_DOCUMENT_ID_NOT_IN_CASE_DETAILS = "a780ee98-3136-4be9-bf56-a46f8da1bc85";
-    private static final String CASE_DOCUMENT_FIELD_2_ID = "e16f2ae0-d6ce-4bd0-a652-47b3c4d86292";
 
-    private final CaseTypeDefinition caseType = new CaseTypeDefinition();
-    List<CaseFieldDefinition>  inputCaseField = new ArrayList<>();
-    private CaseFieldDefinition documentCaseField;
-    private CaseFieldDefinition complexCaseField;
-    private CaseFieldDefinition collectionCaseField;
-    private CaseFieldDefinition documentInComplexCaseField;
-    private List<CaseFieldDefinition> caseFields;
-    private CaseDetails caseDetails;
-    private Optional<CaseDetails> caseDetailsOptional;
-    private HashMap<String,JsonNode> caseDetailsData;
     private final DocumentPermissions documentPermissions = DocumentPermissions.builder()
         .id(CASE_DOCUMENT_ID)
         .permissions(Arrays.asList(Permission.READ))
         .build();
 
+    private  CaseDetails caseDetails;
+
     @BeforeEach
     public void setUp() throws IOException {
-
         MockitoAnnotations.initMocks(this);
-        caseDocumentsOperation = new GetCaseDocumentOperation(getCaseOperation,
-            caseTypeService, userRepository, caseUserRepository, documentIdValidationService, accessControlService);
+        caseDocumentsOperation = new GetCaseDocumentOperation(getCaseOperation, documentIdValidationService);
 
-        prepareCaseField();
-        prepareCaseDetails();
-        doReturn(Boolean.TRUE).when(documentIdValidationService).validateDocumentUUID(CASE_DOCUMENT_ID);
-        doReturn(caseType).when(caseTypeService).getCaseTypeForJurisdiction(CASE_TYPE_ID, JURISDICTION_ID);
-        doReturn(Boolean.TRUE)
-            .when(documentIdValidationService).validateDocumentUUID(CASE_DOCUMENT_ID_NOT_IN_CASE_DETAILS);
+        caseDetails = prepareCaseDetails();
+        doReturn(Optional.of(caseDetails)).when(getCaseOperation).execute(CASE_REFERENCE);
+
+        doReturn(Boolean.TRUE).when(documentIdValidationService).validateDocumentUUID(anyString());
     }
 
 
@@ -125,7 +90,7 @@ public class GetCaseDocumentsOperationTest {
     @Test
     @DisplayName("should throw CaseNotFoundException when case does not exist")
     void shouldThrowCaseNotFoundWhenCaseNotExist() {
-        doReturn(caseDetailsOptional.empty()).when(getCaseOperation).execute(CASE_REFERENCE);
+        doReturn(Optional.empty()).when(getCaseOperation).execute(CASE_REFERENCE);
         assertThrows(CaseNotFoundException.class,
             () -> caseDocumentsOperation.getCaseDocumentMetadata(CASE_REFERENCE, CASE_DOCUMENT_ID));
     }
@@ -133,258 +98,97 @@ public class GetCaseDocumentsOperationTest {
     @Test
     @DisplayName("should throw CaseNotFoundException when case reference  is null ")
     void shouldThrowCaseNotFoundWhenCaseReferenceIsNull() {
-        doReturn(caseDetailsOptional).when(getCaseOperation).execute(null);
+        doReturn(Optional.empty()).when(getCaseOperation).execute(null);
         assertThrows(CaseNotFoundException.class,
             () -> caseDocumentsOperation.getCaseDocumentMetadata(null, CASE_DOCUMENT_ID));
     }
 
     @Test
-    @DisplayName("should return CaseDocumentMetadata")
-    void shouldReturnGetCaseDocumentMetadata() {
+    @DisplayName("should return CaseDocumentMetadata for simple document")
+    void shouldReturnGetCaseDocumentMetadataForSimpleDocument() {
         CaseDocumentMetadata caseDocumentMetadata =
             caseDocumentsOperation.getCaseDocumentMetadata(CASE_REFERENCE, CASE_DOCUMENT_ID);
+
         assertAll(
             () -> assertThat(caseDocumentMetadata.getCaseId(), is(caseDetails.getReferenceAsString())),
-            () -> assertThat(caseDocumentMetadata.getDocumentPermissions(), is(documentPermissions)),
-            () -> assertThat(caseDocumentMetadata.getDocumentPermissions().getId(), is(documentPermissions.getId())),
+            () -> assertThat(caseDocumentMetadata.getDocumentPermissions().getId(), is(CASE_DOCUMENT_ID)),
             () -> assertThat(caseDocumentMetadata.getDocumentPermissions().getPermissions(),
                                 is(documentPermissions.getPermissions()))
         );
     }
 
     @Test
-    @DisplayName("should throw CaseDocumentMetadataException when given document id not have read permission")
-    void  shouldThrowExceptionWhenDocumentHaveNoReadPermission() throws IOException {
-        assertThrows(CaseDocumentNotFoundException.class,
-            () -> caseDocumentsOperation.getCaseDocumentMetadata(CASE_REFERENCE,
-            CASE_DOCUMENT_ID_NOT_IN_CASE_DETAILS));
-    }
-
-    @Test
-    @DisplayName("should throw CaseDocumentMetadataException when passing collection case type field only")
-    void  shouldThrowExceptionWhenCollectionTypeField() throws IOException {
-        caseType.setCaseFieldDefinitions(Arrays.asList(collectionCaseField));
-        assertThrows(CaseDocumentNotFoundException.class,
-            () -> caseDocumentsOperation.getCaseDocumentMetadata(CASE_REFERENCE,
-            CASE_DOCUMENT_ID_NOT_IN_CASE_DETAILS));
-    }
-
-
-    @Test
-    @DisplayName("should throw CaseDocumentNotFoundException when case type have empty case fields")
-    void shouldThrowCaseDocumentNotFoundException() {
-        caseType.setCaseFieldDefinitions(Collections.emptyList());
-        assertThrows(CaseDocumentNotFoundException.class,
-            () -> caseDocumentsOperation.getCaseDocumentMetadata(CASE_REFERENCE, CASE_DOCUMENT_ID));
-    }
-
-    @Test
-    @DisplayName("should extract the document fields once passing the document type case fields")
-    void shouldExtractDocumentFieldsFromCaseType() {
-        List<CaseFieldDefinition> expectedCaseField =
-            Arrays.asList(documentCaseField,documentInComplexCaseField.getFieldTypeDefinition()
-                .getComplexFields().get(3));
-        caseDocumentsOperation.extractDocumentFieldsFromCaseDefinition(caseFields,inputCaseField);
-        assertAll(
-            () -> assertEquals(inputCaseField,expectedCaseField)
-
-        );
-    }
-
-    @Test
-    @DisplayName("should extract the document fields from Collection case type field")
-    void shouldExtractDocumentFieldsFromCollectionTypeCaseField() throws IOException {
-        List<CaseFieldDefinition> caseFields =
-            Arrays.asList(buildCaseField("collection-type-with-document-case-field.json"));
-        List<CaseFieldDefinition> expectedCaseField =
-            Arrays.asList(caseFields.get(0).getFieldTypeDefinition().getComplexFields().get(0));
-        caseDocumentsOperation.extractDocumentFieldsFromCaseDefinition(caseFields,inputCaseField);
-        assertAll(
-            () -> assertEquals(inputCaseField,expectedCaseField)
-        );
-    }
-
-    @Test
-    @DisplayName("should not extract any document fields when list of Case Field is  empty ")
-    void shouldNotExtractAnyFieldsInCaseOfListEmpty() {
-        List<CaseFieldDefinition> caseFields = Collections.EMPTY_LIST;
-        List<CaseFieldDefinition>  expectedCaseField = Collections.EMPTY_LIST;
-
-        caseDocumentsOperation.extractDocumentFieldsFromCaseDefinition(caseFields,inputCaseField);
-        assertAll(() -> assertEquals(inputCaseField,expectedCaseField));
-    }
-
-
-    @Test
-    @DisplayName("should return CaseDocumentMetadata")
-    void shouldReturnCaseDocumentMetadata() {
-        CaseDocumentMetadata caseDocumentMetadata =
-            caseDocumentsOperation.getCaseDocumentMetadata(CASE_REFERENCE, CASE_DOCUMENT_ID);
-        assertAll(
-            () -> assertThat(caseDocumentMetadata.getCaseId(), is(caseDetails.getReferenceAsString())),
-            () -> assertThat(caseDocumentMetadata.getDocumentPermissions(), is(documentPermissions)),
-            () -> assertThat(caseDocumentMetadata.getDocumentPermissions().getId(), is(documentPermissions.getId())),
-            () -> assertThat(caseDocumentMetadata.getDocumentPermissions().getPermissions(),
-                                is(documentPermissions.getPermissions()))
-        );
-    }
-
-    @Test
-    @DisplayName("should throw CaseDocumentNotFoundException when  binary and document url is missing for given "
-        +  "document id")
-    void shouldThrowExceptionIfUrlIsMissing() throws IOException {
-        JsonNode expectedNode = buildJsonNode("document-fields-without-url.json");
-        doReturn(Boolean.TRUE).when(documentIdValidationService).validateDocumentUUID(CASE_DOCUMENT_FIELD_2_ID);
-        doReturn(expectedNode).when(accessControlService).filterCaseFieldsByAccess(
-            ArgumentMatchers.any(JsonNode.class),
-            ArgumentMatchers.any(List.class),
-            ArgumentMatchers.any(Set.class),
-            eq(AccessControlService.CAN_READ),
-            anyBoolean());
-
-        assertThrows(CaseDocumentNotFoundException.class,
-            () -> caseDocumentsOperation.getCaseDocumentMetadata(CASE_REFERENCE,
-            CASE_DOCUMENT_FIELD_2_ID));
-    }
-
-    @Test
-    @DisplayName("should return CaseDocumentMetaData when Binary url is  missing for given document id and"
-        + " having read permission")
-    void shouldReturnCaseDocumentMetaData() throws IOException {
-        JsonNode expectedNode = buildJsonNode("document-fields-without-url.json");
-        doReturn(expectedNode).when(accessControlService).filterCaseFieldsByAccess(
-            ArgumentMatchers.any(JsonNode.class),
-            ArgumentMatchers.any(List.class),
-            ArgumentMatchers.any(Set.class),
-            eq(AccessControlService.CAN_READ),
-            anyBoolean());
+    @DisplayName("should return CaseDocumentMetadata for document in a complex type")
+    void shouldReturnGetCaseDocumentMetadataForComplexDocument() {
 
         CaseDocumentMetadata caseDocumentMetadata =
-            caseDocumentsOperation.getCaseDocumentMetadata(CASE_REFERENCE, CASE_DOCUMENT_ID);
+            caseDocumentsOperation.getCaseDocumentMetadata(CASE_REFERENCE, CASE_DOCUMENT_ID_IN_COMPLEX_TYPE);
+
         assertAll(
             () -> assertThat(caseDocumentMetadata.getCaseId(), is(caseDetails.getReferenceAsString())),
-            () -> assertThat(caseDocumentMetadata.getDocumentPermissions(), is(documentPermissions)),
-            () -> assertThat(caseDocumentMetadata.getDocumentPermissions().getId(), is(documentPermissions.getId())),
+            () -> assertThat(caseDocumentMetadata.getDocumentPermissions().getId(),
+                is(CASE_DOCUMENT_ID_IN_COMPLEX_TYPE)),
             () -> assertThat(caseDocumentMetadata.getDocumentPermissions().getPermissions(),
-                                is(documentPermissions.getPermissions()))
-        );
-
-
-    }
-
-    @Test
-    @DisplayName("should return CaseDocumentMetaData when passing document and complex type case fields")
-    void shouldReturnCaseDocumentMetaDataWithoutCollectionField() throws IOException {
-
-        caseFields = Arrays.asList(documentCaseField,complexCaseField);
-        caseType.setCaseFieldDefinitions(caseFields);
-        CaseDocumentMetadata caseDocumentMetadata
-            = caseDocumentsOperation.getCaseDocumentMetadata(CASE_REFERENCE, CASE_DOCUMENT_ID);
-        assertAll(
-            () -> assertThat(caseDocumentMetadata.getCaseId(), is(caseDetails.getReferenceAsString())),
-            () -> assertThat(caseDocumentMetadata.getDocumentPermissions(), is(documentPermissions)),
-            () -> assertThat(caseDocumentMetadata.getDocumentPermissions().getId(), is(documentPermissions.getId())),
-            () -> assertThat(caseDocumentMetadata.getDocumentPermissions().getPermissions(),
-                                is(documentPermissions.getPermissions()))
+                is(documentPermissions.getPermissions()))
         );
     }
 
     @Test
-    @DisplayName("should return CaseDocumentMetaData  when passing document and collection type case fields")
-    void shouldReturnCaseDocumentMetaDataWithoutComplexField() throws IOException {
-        caseFields = Arrays.asList(documentCaseField,collectionCaseField);
-        caseType.setCaseFieldDefinitions(caseFields);
-        CaseDocumentMetadata caseDocumentMetadata
-            = caseDocumentsOperation.getCaseDocumentMetadata(CASE_REFERENCE, CASE_DOCUMENT_ID);
+    @DisplayName("should return CaseDocumentMetadata for document in a collection")
+    void shouldReturnGetCaseDocumentMetadataForCollectionDocument() {
+
+        CaseDocumentMetadata caseDocumentMetadata =
+            caseDocumentsOperation.getCaseDocumentMetadata(CASE_REFERENCE, CASE_DOCUMENT_ID_IN_A_COLLECTION);
+
         assertAll(
             () -> assertThat(caseDocumentMetadata.getCaseId(), is(caseDetails.getReferenceAsString())),
-            () -> assertThat(caseDocumentMetadata.getDocumentPermissions(), is(documentPermissions)),
-            () -> assertThat(caseDocumentMetadata.getDocumentPermissions().getId(), is(documentPermissions.getId())),
+            () -> assertThat(caseDocumentMetadata.getDocumentPermissions().getId(),
+                is(CASE_DOCUMENT_ID_IN_A_COLLECTION)),
             () -> assertThat(caseDocumentMetadata.getDocumentPermissions().getPermissions(),
-                                    is(documentPermissions.getPermissions()))
+                is(documentPermissions.getPermissions()))
         );
     }
 
     @Test
-    @DisplayName("should throw exception when there is no document type case field")
-    void shouldThrowExceptionWithoutDocumentField() throws IOException {
+    @DisplayName("should return CaseDocumentMetadata for document in a collection of complex type")
+    void shouldReturnGetCaseDocumentMetadataForDocumentInCollectionOfComplexType() {
 
-        caseFields = Arrays.asList(complexCaseField,collectionCaseField);
-        caseType.setCaseFieldDefinitions(caseFields);
+        CaseDocumentMetadata caseDocumentMetadata =
+            caseDocumentsOperation.getCaseDocumentMetadata(CASE_REFERENCE, CASE_DOCUMENT_ID_IN_A_COMPLEX_COLLECTION);
+
+        assertAll(
+            () -> assertThat(caseDocumentMetadata.getCaseId(), is(caseDetails.getReferenceAsString())),
+            () -> assertThat(caseDocumentMetadata.getDocumentPermissions().getId(),
+                is(CASE_DOCUMENT_ID_IN_A_COMPLEX_COLLECTION)),
+            () -> assertThat(caseDocumentMetadata.getDocumentPermissions().getPermissions(),
+                is(documentPermissions.getPermissions()))
+        );
+    }
+
+    @Test
+    @DisplayName("should throw CaseDocumentNotFoundException when document is not found")
+    void shouldThrowCaseDocumentNotFoundExceptionWhenDocumentNotAccessible() throws IOException {
 
         assertThrows(CaseDocumentNotFoundException.class,
-            () -> caseDocumentsOperation.getCaseDocumentMetadata(CASE_REFERENCE,
-            CASE_DOCUMENT_ID_NOT_IN_CASE_DETAILS));
+            () -> caseDocumentsOperation.getCaseDocumentMetadata(CASE_REFERENCE, CASE_DOCUMENT_ID_NOT_IN_CASE_DETAILS));
     }
-
-    @Test
-    @DisplayName("collection don't have complex field")
-    void shouldNotExtractDocumentFieldWhenComplexFieldNullInCollection() throws IOException {
-        List<CaseFieldDefinition> caseFields
-            = Arrays.asList(buildCaseField("collection-type-without-complexfield.json"));
-        List<CaseFieldDefinition> expectedCaseField = Arrays.asList();
-        caseDocumentsOperation.extractDocumentFieldsFromCaseDefinition(caseFields,inputCaseField);
-        assertAll(() -> assertEquals(inputCaseField,expectedCaseField));
-    }
-
-    @Test
-    @DisplayName("should throw CaseDocumentMetadataException  in case of  text field")
-    void  shouldThrowCaseDocumentNotFoundExceptionWhenTextField() throws IOException {
-        caseType.setCaseFieldDefinitions(Arrays.asList(buildCaseField("text-type-case-field.json")));
-        assertThrows(CaseDocumentNotFoundException.class,
-            () -> caseDocumentsOperation.getCaseDocumentMetadata(CASE_REFERENCE, CASE_DOCUMENT_ID));
-    }
-
-    static CaseFieldDefinition buildCaseField(String fileName) throws IOException {
-        InputStream inputStream =
-            GetCaseDocumentsOperationTest.class.getClassLoader().getResourceAsStream("tests/".concat(fileName));
-        return
-            new ObjectMapper().readValue(inputStream, new TypeReference<CaseFieldDefinition>() {});
-    }
-
 
     static HashMap<String, JsonNode> buildCaseDetailData(String fileName) throws IOException {
         InputStream inputStream =
             GetCaseDocumentsOperationTest.class.getClassLoader().getResourceAsStream("tests/".concat(fileName));
         return
-            new ObjectMapper().readValue(inputStream, new TypeReference<HashMap<String, JsonNode>>() {
+            new ObjectMapper().readValue(inputStream, new TypeReference<>() {
             });
     }
 
-    static JsonNode buildJsonNode(String fileName) throws IOException {
-        InputStream inputStream =
-            GetCaseDocumentsOperationTest.class.getClassLoader().getResourceAsStream("tests/".concat(fileName));
-        return
-            new ObjectMapper().readValue(inputStream, new TypeReference<JsonNode>() {
-            });
-    }
-
-    private void prepareCaseField() throws IOException {
-        documentCaseField = buildCaseField("document-type-case-field.json");
-        complexCaseField = buildCaseField("complex-type-case-field.json");
-        collectionCaseField = buildCaseField("collection-type-case-field.json");
-        caseDetailsData = buildCaseDetailData("case-details-data.json");
-        documentInComplexCaseField = buildCaseField("complex-type-with-document-case-field.json");
-        caseFields = Arrays.asList(documentCaseField,complexCaseField,collectionCaseField,documentInComplexCaseField);
-        JsonNode expectedNode = buildJsonNode("document-field-node.json");
-        doReturn(expectedNode).when(accessControlService).filterCaseFieldsByAccess(
-            ArgumentMatchers.any(JsonNode.class),
-            ArgumentMatchers.any(List.class),
-            ArgumentMatchers.any(Set.class),
-            eq(AccessControlService.CAN_READ),
-            anyBoolean());
-    }
-
-    private void prepareCaseDetails() {
-        caseDetails = new CaseDetails();
+    private CaseDetails prepareCaseDetails() throws IOException  {
+        HashMap<String,JsonNode> caseDetailsData = buildCaseDetailData("case-details-data.json");
+        CaseDetails caseDetails = new CaseDetails();
         caseDetails.setJurisdiction(JURISDICTION_ID);
         caseDetails.setCaseTypeId(CASE_TYPE_ID);
-        caseDetails.setId(CASE_REFERENCE);
-        caseDetails.setReference(new Long(CASE_REFERENCE));
+        caseDetails.setReference(Long.valueOf(CASE_REFERENCE));
         caseDetails.setData(caseDetailsData);
-        caseType.setCaseFieldDefinitions(caseFields);
-        doReturn(Optional.of(caseDetails)).when(getCaseOperation).execute(CASE_REFERENCE);
-        caseDetailsOptional = Optional.of(new CaseDetails());
+        return caseDetails;
     }
 }
 
